src/objects/Related_SFO__c.object
<CustomObject>
    <fields>
        <fullName>Assumed_Multiplier__c</fullName>
        <defaultValue>0.30</defaultValue>
        <label>Assumed Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_unit__c</fullName>
        <formula>Total_Cost__c  /  Unit_Detail__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Margin__c</fullName>
        <formula>IF(AND(NOT(ISNULL(Total_Cost__c)),Total_Cost__c !=0),(Assumed_Multiplier__c  *  List_Price__c  - Total_Cost__c ) /  Total_Cost__c,0)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Markup__c</fullName>
        <defaultValue>5.0</defaultValue>
        <label>List Markup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>Cost_Per_unit__c  *  List_Markup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Line_Item__c</fullName>
        <formula>Net_Price_Total__c  -  Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin $ Line Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_per_unit__c</fullName>
        <formula>IF(Margin_per_unit_dlr__c!=0, Margin_per_unit_dlr__c / Net_Price_Per_Unit__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin % per unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_per_unit_dlr__c</fullName>
        <formula>Net_Price_Per_Unit__c -  Cost_Per_unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin $ per unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Price_Per_Unit__c</fullName>
        <formula>List_Price__c  *  Assumed_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Price_Total__c</fullName>
        <formula>Total_List_Price__c  *  Assumed_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <formula>SFO__r.Option_Parent__r.Name</formula>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFO_Margin_Line_Item__c</fullName>
        <formula>IF(Net_Price_Total__c!=0, Margin_Line_Item__c  / Net_Price_Total__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin % Line Item</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SFO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Special_Feature_Option__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Read Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Special_Feature_Option__c</referenceTo>
        <relationshipLabel>Related SFO</relationshipLabel>
        <relationshipName>Related_SFO1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>SFO__r.Sum_of_Eng_Draft_Cost__c +( SFO__r.Sum_of_Mod_Material_Mfg_Cost__c * Unit_Detail__r.Quantity__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>List_Price__c  *  Unit_Detail__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Detail</label>
        <referenceTo>FPA_Link__c</referenceTo>
        <relationshipLabel>Related SFO</relationshipLabel>
        <relationshipName>Related_SFO</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related SFO</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Related SFO  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related SFO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>